Changed spacing and added borders for images. Also added new issue in comment page.

--- a/secondPage.css
+++ b/secondPage.css
@@ -5,10 +5,13 @@
 #main{
   margin-bottom: 100px;
 }
+
 .foodImg {
   width: 50px;
   height: 50px;
+  border: 1.2px solid;
 }
+
 #title{
     background-color: rgb(15, 161, 15);
     height: 40px;
@@ -51,6 +54,7 @@
 
 #grains, #dairy, #meat, #veggies_and_fruits, #other{
    margin-top: 10px;
+   padding-left: 10%;
 }
 
 @media screen and (min-width: 900px){
@@ -61,12 +65,7 @@
 }
 
 #grains > p, #dairy > p, #meat > p, #veggies_and_fruits > p, #other > p{
-    padding-left: 20px;
     margin: 0%;
-}
-
-.img{
-    padding-left: 20px;
 }
 
 
